fixed cropped text in buttons when screen width gets smaller

--- a/styling/style.css
+++ b/styling/style.css
@@ -24,9 +24,7 @@ h1, h2 {
 .btnsDiv {
     text-align: center;
 }
-.btn{
-    padding: auto 10px;
-}
+
 #userGame {
     background-color: rgb(255, 255, 255);
     border: black;
@@ -43,6 +41,14 @@ footer {
     width: auto;
 } */
 
+
+@media screen and (max-width: 650px) {
+    .btn{
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+
 /*Not changing the UI for devices like iPad or Surface Duo, only for phones*/
 @media screen and (max-width: 420px) {
     h1 {
@@ -52,6 +58,10 @@ footer {
         font-size: 2.5em;
     }
     .container {
-        max-width: 70%;
+        max-width: 75%;
+    }
+    .btn{
+        padding-left: 5px;
+        padding-right: 5px;
     }
 }
